# linux-isolation-learning

./: .gitignore  01-3-network.md  01-namespaces.md  CLAUDE.md  Cargo.toml  Makefile  README.md  fun-with-ns.md  plan.md  todo.md
.ai/2025-12-27/: 054855-progress-log.md  061411-progress-log.md  062544-progress-log.md  063246-progress-log.md  064056-progress-log.md  223237-progress-log.md  225149-progress-log.md  230349-progress-log.md  231206-progress-log.md  232413-progress-log.md
.ai/2025-12-28/: 014353-progress-log.md  023415-progress-log.md  025044-progress-log.md
.claude/agents/: rust-tutorial-expert.md
.claude/commands/: commit.md  parallel-tutorials.md  prime.md
.devcontainer/: devcontainer.json  validation.md
archive/: 00-info.md  02-cgroups.md  03-runc.md  CLAUDE.md  fun-with-ns.md  scratch.md
archive/.claude/commands/: learn-review.md  prime.md
archive/lab_env/: 04-testing.md
archive/scripts/: lab-env
archive/src/: net_veth_example.py  pid_namespace.py  pid_two.py
backlog/bugs/: BUG-001-devcontainer-root-sudo-guidance.md  BUG-002-setup-rust-crate-count-outdated.md  BUG-003-foundations-proc-tests-duplicated-across-lessons.md  BUG-007-unsafe-boundaries-lesson-requires-missing-module-scaffolding.md  BUG-011-setns-lesson-default-types-snippet-noncompiling.md  BUG-012-cgroups-io-and-bundle-lessons-drift-from-existing-scaffolding.md  BUG-024-ebpf-docs-use-inconsistent-aya-log-logger-types.md  BUG-027-ebpf-reading-data-doc-misuses-syscall_nr-field.md  BUG-029-ebpf-maps-doc-incorrect-claims-about-power-of-two-and-atomic-updates.md  BUG-031-fast-track-pid-namespace-missing-test-and-todo.md  BUG-032-fast-track-mount-namespace-missing-test-and-todo.md  BUG-033-fast-track-network-namespace-missing-test-and-todo.md  BUG-034-fast-track-combine-namespaces-missing-test-and-todo.md  BUG-035-fast-track-cgroup-basics-missing-test-and-todo.md  BUG-036-fast-track-memory-limits-missing-cgroup-delegation-steps.md  BUG-037-fast-track-cpu-limits-missing-cgroup-delegation-steps.md  BUG-038-fast-track-oci-bundle-missing-test-impl-and-dev-dep.md  BUG-039-fast-track-runc-run-config-missing-proc-mount-and-arch-busybox.md  BUG-040-fast-track-ebpf-tracing-missing-test-and-commands.md
backlog/bugs/completed/: BUG-001-devcontainer-root-sudo-guidance.md  BUG-003-foundations-proc-tests-duplicated-across-lessons.md  BUG-004-proc_test-doc-link-wrong.md  BUG-005-permissions-lesson-check-caps-not-scaffolded.md  BUG-006-error-handling-lesson-drift-and-invalid-snippet.md  (+31 more)
backlog/plans/: 02_ebpf_plan.md  04_ebpf_plan.md  05_lean_restructure_plan.md  06_orbstack_cgroup_plan.md
backlog/stories/: STORY-001-devcontainer-support-for-oci-runc-docs.md
backlog/todos/: 01_init_todo.md  02_ebpf_todo.md  04_ebpf_todo.md
crates/cgroup-tool/: Cargo.toml
crates/contain/: Cargo.toml
crates/contain/src/: cgroup.rs  main.rs  net.rs  ns.rs  oci.rs  trace.rs
crates/contain/tests/: cgroup_test.rs  net_test.rs  ns_container_test.rs  ns_mount_test.rs  ns_pid_test.rs  oci_test.rs  trace_test.rs
crates/ebpf-tool/: Cargo.toml  build.rs
crates/ebpf-tool-common/: Cargo.toml
crates/ebpf-tool-common/src/: lib.rs
crates/ebpf-tool-ebpf/: Cargo.toml
crates/ebpf-tool-ebpf/src/: kprobe.rs  main.rs  perf.rs  tracepoint.rs  uprobe.rs
crates/ebpf-tool/src/: main.rs
crates/ebpf-tool/tests/: check_test.rs  kprobe_test.rs  perf_test.rs  stats_test.rs  tracepoint_test.rs  tracer_test.rs  uprobe_test.rs
crates/netns-tool/: Cargo.toml
crates/ns-tool/: Cargo.toml
crates/oci-tool/: Cargo.toml
docs/: 00-getting-started.md
docs/00-foundations/: 00-lesson-template.md  00-setup-rust.md  01-rust-syscall-basics.md  02-cli-patterns.md  03-procfs-intro.md  04-permissions-and-sudo.md  05-error-handling.md  06-unsafe-boundaries.md
docs/01-namespaces/: 01-pid-namespace.md  02-unshare-vs-clone.md  03-uts-ipc.md  04-mount-namespace.md  05-minimal-rootfs.md  06-netns-basics.md  07-veth-bridge.md  08-netns-nat.md  09-combine-ns.md  10-join-existing.md
docs/02-cgroups/: 01-cgv2-basics.md  02-memory.md  03-cpu.md  04-io.md  05-pids.md  06-multi-resource.md
docs/03-runc/: 01-oci-bundle.md  02-config-json.md  03-run-basic.md  04-lifecycle.md  05-seccomp.md  06-network-integration.md  07-cgroups-integration.md
docs/04-ebpf/: 00-ebpf-setup.md  01-hello-kprobe.md  02-reading-data.md  03-maps.md  04-perf-events.md  05-uprobes.md  06-tracepoints.md  07-perf-sampling.md  08-combining.md
docs/90-appendix/: 01-rust-syscall-cheatsheet.md  02-troubleshooting.md  03-orbstack-setup.md
docs/fast-track/: 01-pid-namespace.md  02-mount-namespace.md  03-network-namespace.md  04-combine.md  05-cgroup-basics.md  06-memory-limits.md  07-cpu-limits.md  08-oci-bundle.md  09-runc-run.md  10-ebpf-tracing.md  README.md
lab_env/: 01-Setup.md  02-Config.md  03-Tear-Down-Recreate.md  04-testing.md
scripts/: README.md  lab-env  validate-devcontainer.sh
src/: net_internet_access.py  net_namespace_basic.py  net_namespace_unshare.py  net_veth_example.py  pid_namespace.py  pid_two.py  pid_unshare.py
(+29 files in other folders)
