[workspace]
members = [
  "crates/ns-tool",
  "crates/netns-tool",
  "crates/cgroup-tool",
  "crates/oci-tool",
  "crates/ebpf-tool",
  "crates/ebpf-tool-common",
  "crates/contain",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
aya = "0.13"
aya-log = "0.2"
bytes = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", default-features = false, features = ["sched", "mount", "net", "user", "fs", "hostname", "signal", "process"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
