[package]
name = "contain"
version = "0.1.0"
edition = "2021"
description = "Learn container internals hands-on - unified CLI for fast-track tutorials"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
